--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,10 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Build
+      run: |
+        make build
+
     - name: Openapi checks
       run: |
         make openapi
